--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -58,6 +58,7 @@
   padding: 15px;
   text-align: center;
   background-color: #47565A;
+  /*background-color: #ddf124;*/
   color: white;
   border-radius: 5px;
 }
