--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div class="game-header">
     <h3 class="logo">EUIGS Feria de Abril 2021</h3>
     <div class="score-block">
-      <h3 class="score" [ngClass]="{'new-best-score': newBestScore}">Encola: {{score}} / Iluminado: {{currentBulbs}}</h3>
+      <h3 class="score" [ngClass]="{'new-best-score': newBestScore}">Encola: {{score}} / Iluminado: {{currentBulbs}} / Tiempo: {{time}} s</h3>
     </div>
   </div>
   <div class="game-body">
