Dialogo para pedir nombre y equipo + datos jugador en cabecera

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,12 +4,25 @@
   position: relative;
 }
 
+.game-header>.logo-block {
+  display: inline-block;
+}
+
+.game-header>.team-block {
+  display: inline-block;
+}
+
 .game-header>.score-block {
   display: inline-block;
 }
 
 .score-block>.score {
-  position: absolute;
+  /*position: absolute;*/
+  right: 8px;
+  top: -5px;
+}
+
+.score-block>.time {
   right: 8px;
   top: -5px;
 }
