--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,15 @@
 <div class="game-container">
   <div class="game-header">
-    <h3 class="logo">EUIGS Feria de Abril 2021</h3>
+    <div class="logo-block" >
+      <h3>EUIGS Feria de Abril 2021</h3>
+    </div>
+    <div class="team-block" *ngIf="teamSet" >
+      <h3>Jugador: {{this.player.name}} ( {{this.player.team}} ) </h3>
+    </div>
     <div class="score-block">
-      <h3 class="score" [ngClass]="{'new-best-score': newBestScore}">Encola: {{score}} / Iluminado: {{currentBulbs}} / Tiempo: {{time}} s</h3>
+      <div class="score" [ngClass]="{'new-best-score': newBestScore}">Recogidas: {{score}} / </div>
+      <div class="new-best-score">Entregadas:{{currentBulbs}} </div>
+      <div class="time">Tiempo: {{time}} s</div>
     </div>
   </div>
   <div class="game-body">
@@ -11,9 +18,6 @@
       <div class="column" [ngStyle]="{'background-color': setColors(i, j)}" *ngFor="let row of column; let j = index"></div>
     </div>
   </div>
-  <div class="start-button" [ngClass]="{'disable-clicks': gameStarted}" (click)="newGame('obstacles')">Start Game</div>
-  <div class="new-game-menu" *ngIf="showMenuChecker">
-    <span class="new-game-menu-label">Select Mode</span>
-    <div class="start-button new-game-button" (click)="newGame(mode)" *ngFor="let mode of getKeys(all_modes)">{{all_modes[mode]}}</div>
-  </div>
+  <div class="start-button" [ngClass]="{'disable-clicks': gameStarted}"    (click)="openDialog()" > Comenzar </div>
 </div>
+
