--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,5 @@
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+
 * {
   font-family: "Trebuchet MS", Helvetica, sans-serif;
   -moz-user-select: none;
