Corregido enemigo que 'se escapa'

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
       <h3>EUIGS Feria de Abril 2021</h3>
     </div>
     <div class="team-block" *ngIf="teamSet" >
-      <h3>Jugador: {{this.player.name}} ( {{this.player.team}} ) - {{this.remainingAttempts}} vidas </h3>
+      <h3>Jugador: {{this.player.name}} ( {{this.player.team}} )</h3>
     </div>
     <div class="score-block">
       <div class="score" [ngClass]="{'new-best-score': newBestScore}">Recogidas: {{score}} / </div>
