--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,9 +15,9 @@
   <div class="game-body">
     <div class="game-board">
       <div class="row" *ngFor="let column of board; let i = index;">
-      <div class="column" [ngStyle]="{'background-color': setColors(i, j)}" *ngFor="let row of column; let j = index"></div>
-    </div>
-  </div>
+        <div [ngClass]="setClass(i, j)" *ngFor="let row of column; let j = index">
+      </div>
+    </div>  
   <div class="start-button" [ngClass]="{'disable-clicks': gameStarted}"    (click)="openDialog()" > Comenzar </div>
 </div>
 
