--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,7 @@
     </mat-grid-tile> 
   </mat-grid-list>
   <hr>  
-  <mat-grid-list cols="8" rowHeight="490px">
+  <mat-grid-list cols="8" rowHeight="600px">
     <mat-grid-tile colspan="2">&nbsp;
       <span class="enunciado">
         Ayúdanos a recuperar los farolillos que el viento ha desperdigado por el real justo antes 
@@ -39,6 +39,7 @@
         <div class="game-board">
           <div class="row" *ngFor="let column of arrayHeight(); let i = index;">
             <div [ngClass]="setClass(i, j)" *ngFor="let row of arrayWidth(); let j = index">
+              <img *ngIf = "displayCaseta(i,j)" class = "imagen_caseta" src = "/assets/images/caseta.png"/>
           </div>
         </div>  
       </div></div>
@@ -62,19 +63,16 @@
       
   <mat-slide-toggle
     class="example-margin"
-      [color]="color"
       [checked]="volumeOn"
       (change)="onToggleVolume($event)">Musica</mat-slide-toggle>
     <mat-slider
       class="example-margin"
-      [invert]="invert"
       [max]=1
       [min]=0
       [step]=0.1
       [thumbLabel]=true
       [tickInterval]=0.1
       [(ngModel)]="volume"
-      [vertical]="vertical"
       (change)="onChangeVolume($event)">
   </mat-slider>
 
