--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -198,7 +198,18 @@
 
 .bombilla {
   background-color: darkgoldenrod;
-  background-image: url('/assets/images/bombilla.svg');
+  background-image: url('/assets/images/farolillo.png');
+  background-size: 25px;
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 26px;
+  height: 30px;
+  display: inline-block;
+}
+
+.enemigo {
+  background-color: darkgoldenrod;
+  background-image: url('/assets/images/hombrecorto.png');
   background-size: 28px;
   background-repeat: no-repeat;
   background-position: center;
@@ -207,9 +218,9 @@
   display: inline-block;
 }
 
-.enemigo {
+.enemigo-compadres {
   background-color: darkgoldenrod;
-  background-image: url('/assets/images/caballo.svg');
+  background-image: url('/assets/images/compadres.png');
   background-size: 28px;
   background-repeat: no-repeat;
   background-position: center;
@@ -231,9 +242,9 @@
 
 .cuerpo {
   background-color: darkgoldenrod;
-  background-image: url('/assets/images/bombilla.svg');
-  background-size: 28px;
-  width: 30px;
+  background-image: url('/assets/images/farolillo.png');
+  background-size: 25px;
+  width: 26px;
   height: 30px;
   display: inline-block;
 }
