--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,12 +27,12 @@
   </mat-grid-list>
   <hr>  
   <mat-grid-list cols="8" rowHeight="600px">
-    <mat-grid-tile colspan="2">&nbsp;
       <span class="enunciado">
-        Ayúdanos a recuperar los farolillos que el viento ha desperdigado por el real justo antes 
-        del alumbrao <img src="assets/images/gitana.png" width="40px"><img src="assets/images/hombrecorto.png" width="50px">
+        <img src="assets/images/gitana.png" width="40px"><br>
+        Ayúdanos a recuperar los farolillos <img src="assets/images/farolillo.png" width="50px"> que el viento ha desperdigado por el real justo antes 
+        del alumbrao 
         <br>
-        ¡Y ten cuidao con los caballistas y los borrachos!
+        ¡Y ten cuidao con los caballistas <img src="assets/images/hombrecorto.png" width="50px"> y los borrachos <img src="assets/images/compadres.png" width="50px"> !                     
       </span></mat-grid-tile>
     <mat-grid-tile colspan="4">
       <div class="game-body">
