correccion html y estilos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,6 +27,7 @@
   </mat-grid-list>
   <hr>  
   <mat-grid-list cols="8" rowHeight="600px">
+	<mat-grid-tile colspan="2">&nbsp;
       <span class="enunciado">
         <img src="assets/images/gitana.png" width="40px"><br>
         Ayúdanos a recuperar los farolillos <img src="assets/images/farolillo.png" width="50px"> que el viento ha desperdigado por el real justo antes 
