--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,7 +7,6 @@
   display: flex;
   border: 5px;
   height: 150px;
-  margin-left: -50%;
 }
   
 .canvas_up{
@@ -62,9 +61,10 @@
 
 
 .game-header {
-  color: #fff;
+  color: rgb(71, 46, 46);
   padding: 5px 15px 5px 0px;
-  position: relative;    
+  position: relative; 
+  height: 30vh!important;   
 }
 
 .game-header h3 {
@@ -75,13 +75,11 @@
 
 
 .logo-block {
-  background-color: darkcyan;  
-  background-image: url('assets/images/caseta2.png');
-  background-repeat: no-repeat;
-  background-size: 70%;
-  background-position-x: center;
-  background-position-y: top;
-  
+  background-color: #89d0f7;  
+  background-image: url('assets/images/caseta2.png');  
+  background-repeat: no-repeat;  
+  background-position: center center;
+  background-size: auto;  
 }
 
 .logo-block img {
@@ -157,11 +155,15 @@
   font-size: 1.5em;
   font-family: 'Indie Flower';
   padding-left: 10px;
+  padding-top: 2rem;
 }
 
 .game-header>.logo {
   display: inline-block;
   padding-left: 15px;
+}
+.game-board {
+  height: 600px!important;
 }
 
 .game-body {
@@ -171,19 +173,20 @@
 
 }
 
-.game-container {
-  /*width: 468px;*/
+.game-container {  
   position: relative;
   display: block;
   margin: auto;
-  background-color: #47565A;
+  background-color: #072701;
   box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22);
   border-radius: 5px;
   text-align: center;
+  height: 100%;
+  overflow: hidden;
 }
 
-.row {
-  height: 30px;
+.mat-slide-toggle span {
+  font-family: 'Indie Flower'!important;
 }
 
 .box {
@@ -267,8 +270,6 @@
 .start-button {
   padding: 15px;
   text-align: center;
-  background-color: #47565A;  
-  color: white;
 }
 
 
@@ -319,9 +320,52 @@
   max-height: 60%;
 }
 
+.minimapa {
+  height: 30%;
+}
+
+.boton-start {
+  height: 20%;
+}
+
+.music-slide {
+  height: 50%;
+}
+.only-large {
+  display: none;
+}
+.col-enunciado {
+  display: none;
+}
+
+.col-minimapa {
+  width: 35%;
+}
+
+.col-mapa {
+  width: 65%;
+}
 @keyframes glow {
   to {
     text-shadow: 0 0 15px #ffff00;
+  }
+}
+@media screen and (min-width: 1290px ) {
+
+  .euigs, .team-block {
+    padding-top: 2em;
+  }
+  .col-enunciado {
+    width: 25%;
+    display: inherit
+  }
+  
+  .col-minimapa {
+    width: 25%;
+  }
+
+  .col-mapa {
+    width: 50%;
   }
 }
 
