--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -65,7 +65,7 @@
         </div>
       </div>
       <div class="row music-slide enunciado mt-5">
-        <mat-slide-toggle class="ms-3" [checked]="volumeOn" (change)="onToggleVolume($event)"><span>Musica</span></mat-slide-toggle>
+        <mat-slide-toggle class="ms-3" [checked]="volumeOn" (change)="onToggleVolume($event)"><span>Música</span></mat-slide-toggle>
         Volumen <mat-slider class="example-margin" [max]=1 [min]=0 [step]=0.1 [thumbLabel]=true [tickInterval]=0.1
           [(ngModel)]="volume" (change)="onChangeVolume($event)"> 
         </mat-slider>
