Fix margen farolillo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,11 +32,16 @@
   <div class="row my-0 game-board">
     <div class="col-enunciado mt-5 only-large">
       <span class="enunciado ">
+        <img src="assets/images/farolillo.png" width="50px">
+        <img src="assets/images/farolillo.png" width="50px">
+        <img src="assets/images/farolillo.png" width="50px">
+        <img src="assets/images/farolillo.png" width="50px">
+        <img src="assets/images/farolillo.png" width="50px"><br>
         Ayúdanos a recuperar los farolillos que el viento ha desperdigado por el real justo antes
-        del alumbrao <img src="assets/images/gitana.png" width="40px"><img src="assets/images/hombrecorto.png"
-          width="50px">
+        del alumbrao <img src="assets/images/gitana.png" width="40px">
         <br>
-        ¡Y ten cuidao con los caballistas y los borrachos!
+        ¡Y ten cuidao con los caballistas y los borrachos! <img src="assets/images/hombrecorto.png"
+        width="50px"> <img src="assets/images/compadres.png" width="50px">
       </span>
     </div>
     <div class="col-mapa">
