--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -205,7 +205,7 @@
   background-size: 25px;
   background-repeat: no-repeat;
   background-position: center;
-  width: 26px;
+  width: 30px;
   height: 30px;
   display: inline-block;
 }
@@ -246,8 +246,9 @@
 .cuerpo {
   background-color: darkgoldenrod;
   background-image: url('/assets/images/farolillo.png');
+  background-repeat: no-repeat;
   background-size: 25px;
-  width: 26px;
+  width: 30px;
   height: 30px;
   display: inline-block;
 }
