--- a/src/app/newgame/newgame.component.html
+++ b/src/app/newgame/newgame.component.html
@@ -29,6 +29,11 @@
     <input matInput placeholder="¿Cuál es tu nombre?" formControlName = "name">
   </mat-form-field>
 
+  <mat-form-field>
+    <mat-label>Código</mat-label>
+    <input matInput placeholder="Código" formControlName = "codigo">
+  </mat-form-field>
+
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <button mat-button mat-dialog-close>Cerrar</button>
