Casetas de fondo

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -208,6 +208,17 @@
   display: inline-block;
 } 
 
+.fondo {
+  background-color: darkgoldenrod;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 40px;
+  width: 40px;
+  height: 40px;
+  display: inline-block;
+}
+
+
 .bombilla {
   background-color: darkgoldenrod;
   background-image: url('/assets/images/farolillo.png');
@@ -235,15 +246,30 @@
 
 .obstaculo {
   background-color: #383522;
-  background-size: 60px;
+}
+
+.caseta {
+  background-image: url('/assets/images/caseta.png');
+}
+
+.c00 {
+  background-image: url('/assets/images/ca00.png');
+}
+
+.c01 {
+  background-image: url('/assets/images/ca01.png');
+}
+
+.c10 {
+  background-image: url('/assets/images/ca10.png');
+}
+
+.c11 {
+  background-image: url('/assets/images/ca10.png');
 }
 
 .portada {
   background-color: #385522;
-}
-
-.fondo {
-  background-color: darkgoldenrod;
 }
 
 .start-button {
