--- a/src/app/newgame/newgame.component.html
+++ b/src/app/newgame/newgame.component.html
@@ -33,17 +33,17 @@
   <h3>Datos</h3>
   <mat-form-field>
     <mat-label>Equipo</mat-label>
-    <input matInput placeholder="¿Cual es el nombre de tu equipo?" cdkFocusInitial formControlName="team">
+    <input type="text" matInput placeholder="¿Cual es el número de tu equipo?" cdkFocusInitial formControlName="team">
   </mat-form-field>
 
   <mat-form-field>
     <mat-label>Nombre</mat-label>
-    <input matInput placeholder="¿Cuál es tu nombre?" formControlName="name">
+    <input type="text"  matInput placeholder="¿Cuál es tu nombre?" formControlName="name">
   </mat-form-field>
 
   <mat-form-field>
     <mat-label>Código</mat-label>
-    <input matInput placeholder="Código" formControlName="codigo">
+    <input type="text" matInput placeholder="Código" formControlName="codigo">
   </mat-form-field>
 
 </mat-dialog-content>
